fix: body overflow hidden

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -18,6 +18,7 @@ body {
   color: var(--semi-color-text-0);
   background-color: rgba(0, 0, 0, 0);
   margin: 0;
+  overflow: hidden;
 }
 
 /* For Webkit browsers (Chrome, Safari) */
